fix: fix active responsive link span overflow and add active pulse animation

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -267,7 +267,6 @@
 
 .mobileNavlinks .navlinksItem span {
   position: absolute;
-  content: "";
   height: 100%;
   width: 100%;
   top: 0;
@@ -282,14 +281,16 @@
   line-height: 6.4rem;
   letter-spacing: -0.2rem;
   color: var(--secondary-color);
+  background-color: transparent;
+  overflow: hidden;
 
   transition: all 0.4s 0.1s ease-out;
   transform: translateX(-100%);
 }
 
 .mobileNavlinks .navlinksItem .activeLinkTag span {
-  overflow: hidden;
   transform: translateX(0);
+  animation: pulse 1s ease-in-out infinite 0.5s;
 }
 
 .contactButton {
@@ -382,6 +383,15 @@
 
   100% {
     width: 100%;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
